# prompto

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
LICENSE/: index.html
docs/: README.md  about.md  add_new_api.md  anthropic.md  azure_openai.md  commands.md  contribution.md  environment_variables.md  evaluation.md  experiment_file.md  gemini.md  gen_ref_pages.py  huggingface_tgi.md  index.html  local_models.md  models.md  ollama.md  openai.md  pipeline.md  quart.md  rate_limits.md  rephrasals.md  run_experiment.md  vertexai.md
docs/about/: index.html
docs/add_new_api/: index.html
docs/anthropic/: index.html
docs/azure_openai/: index.html
docs/commands/: index.html
docs/contribution/: index.html
docs/environment_variables/: index.html
docs/evaluation/: index.html
docs/experiment_file/: index.html
docs/gemini/: index.html
docs/huggingface_tgi/: index.html
docs/models/: index.html
docs/ollama/: index.html
docs/openai/: index.html
docs/pipeline/: index.html
docs/quart/: index.html
docs/rate_limits/: index.html
docs/rephrasals/: index.html
docs/vertexai/: index.html
examples/: README.md  index.html
examples/anthropic/: README.md  anthropic-multimodal.ipynb  anthropic.ipynb  anthropic_eval_example.ipynb  index.html
examples/anthropic/anthropic/: index.html
examples/anthropic/anthropic-multimodal/: index.html
examples/anthropic/data/input/: anthropic-example.jsonl  testing_evaluation.jsonl
examples/azure-openai/: README.md  azure-openai-multimodal.ipynb  azure-openai.ipynb  index.html
examples/azure-openai/azure-openai/: index.html
examples/azure-openai/azure-openai-multimodal/: index.html
examples/evaluation/: Running_experiments_with_custom_evaluations.ipynb  completed_example.jsonl  example_file.jsonl  rephrase_prompts.ipynb  running_llm_as_judge_experiment.ipynb
examples/evaluation/Running_experiments_with_custom_evaluations/: index.html
examples/evaluation/judge/: settings.json  template.txt  template2.txt
examples/evaluation/rephrase/: settings.json  template.txt
examples/evaluation/rephrase_prompts/: index.html
examples/evaluation/running_llm_as_judge_experiment/: index.html
examples/gemini/: README.md  gemini-multimodal.ipynb  gemini-upload.ipynb  gemini.ipynb  gemini_upload.ipynb  index.html
examples/gemini/gemini/: index.html
examples/gemini/gemini-multimodal/: index.html
examples/gemini/gemini-upload/: index.html
examples/notebook/: running_experiments.ipynb
examples/notebooks/: grouping_prompts_and_specifying_rate_limits.ipynb  running_experiments.ipynb
examples/notebooks/grouping_prompts_and_specifying_rate_limits/: index.html
examples/notebooks/running_experiments/: index.html
examples/ollama/: README.md  index.html  ollama.ipynb
examples/ollama/ollama/: index.html
examples/openai/: README.md  index.html  openai-multimodal.ipynb  openai.ipynb  openai.jsonl
examples/openai/openai/: index.html
examples/openai/openai-multimodal/: index.html
examples/openai_example/: experiment_1.ipynb
examples/openai_example/raw_data/: shuffled_questions_subset_5.json
examples/quart_api/: gpt2_api.py  quart_api.py
examples/system-demo/: README.md  alpaca_sample_generation.ipynb  api_utils.py  dataset_utils.py  experiment_1.ipynb  experiment_2.ipynb  experiment_3.ipynb  index.html  model_utils.py  sample_prompts.json
examples/system-demo/alpaca_sample_generation/: index.html
examples/system-demo/experiment_1/: index.html
examples/system-demo/experiment_2/: index.html
examples/system-demo/experiment_3/: index.html
examples/vertexai/: README.md  index.html  vertexai-multimodal.ipynb  vertexai.ipynb
examples/vertexai/vertexai/: index.html
examples/vertexai/vertexai-multimodal/: index.html
notebook/example/: running_experiments.ipynb
notebook/openai_example/: experiment_1.ipynb
notebook/openai_example/raw_data/: shuffled_questions_subset_5.json
reference/DOC_STRINGS/: index.html
reference/src/prompto/: index.html
reference/tests/: index.html
reference/tests/apis/: index.html
reference/tests/core/: index.html
reference/tests/scripts/: index.html
search/: search_index.json
src/batch_llm/: __init__.py  api_calls.py  base.py  experiment_processing.py  file_operations.py  settings.py  utils.py
src/batch_llm/models/: __init__.py  base.py
src/batch_llm/scripts/: create_judge_file.py  run_checks.py  run_pipeline.py  run_process.py
src/prompto/: __init__.py  experiment.py  experiment_pipeline.py  experiment_processing.py  judge.py  rephrasal.py  rephrasal_parser.py  scorer.py  settings.py  test_new.jsonl  upload_media.py  utils.py
src/prompto/apis/: __init__.py  base.py
src/prompto/models/: __init__.py  base.py
src/prompto/scripts/: check_experiment.py  convert_images.py  create_judge_file.py  create_rephrase_file.py  obtain_missing_id_jsonl.py  run_checks.py  run_experiment.py  run_pipeline.py
tests/: conftest.py  test_minimal.py
tests/apis/: test_anthropic.py  test_base.py  test_import_warnings.py  test_imports.py
tests/apis/anthropic/: test_anthropic.py  test_anthropic_chat_input.py  test_anthropic_history_input.py  test_anthropic_string_input.py
tests/apis/gemini/: test_gemini.py  test_gemini_chat_input.py  test_gemini_history_input.py  test_gemini_image_input.py  test_gemini_media.py  test_gemini_string_input.py  test_gemini_utils.py
tests/apis/vertexai/: test_vertexai.py  test_vertexai_chat_input.py  test_vertexai_history_input.py  test_vertexai_string_input.py
tests/core/: log.txt  new_log.txt  test_experiment.py  test_experiment_generate_text.py  test_experiment_pipeline.py  test_experiment_process.py  test_experiment_query_model.py  test_experiment_send_requests.py  test_judge.py  test_rephrasal.py  test_scorer.py  test_settings.py  test_utils.py
tests/models/: test_base.py
tests/scripts/: test_create_judge_file.py  test_run_experiment.py  test_run_experiment_command.py  test_upload_media.py
(+259 files in other folders)
