[tool.poetry]
name = "prompto"
version = "0.2.1"
description = "Library for asynchronous querying of LLM API endpoints and logging progress"
authors = [
    "rchan <rchan@turing.ac.uk>",
    "fedenanni <nanni.federico@gmail.com>",
    "evelinag <evelina@evelinag.com>",
    "edchapman88 <echapman@turing.ac.uk>",
    "edwinb12 <w.edwin.brown@outlook.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
# tqdm = "^4.66.4"  # working with 4.67.1
tqdm = "^4.67.1"  # working with 4.67.1
python-dotenv = "^1.0.1" # working with 1.1.0
pandas = "^2.2.3"
black = { version = "^24.3.0", optional = true } # working with 24.10.0
isort = { version = "^5.13.2", optional = true }
pre-commit = { version = "^3.7.0", optional = true } # working with 3.8.0
pytest = { version = "^8.1.1", optional = true } # working with 8.3.5
pytest-asyncio = { version = "^0.23.6", optional = true } # working with 0.23.8
pytest-cov = { version = "^5.0.0", optional = true }
ipykernel = { version = "^6.29.4", optional = true } # working with 6.29.5
# mkdocs-material = { version = "^9.5.26", optional = true } # working with 9.6.11
mkdocstrings-python = { version = "^1.10.3", optional = true } # working with 1.16.10
mkdocs-gen-files = { version = "^0.5.0", optional = true }
mkdocs-literate-nav = { version = "^0.6.1", optional = true } # working with 0.6.2
# mkdocs-section-index = { version = "^0.3.9", optional = true }
mkdocs-same-dir = { version = "^0.1.3", optional = true }
mkdocs-jupyter = { version = "^0.24.7", optional = true } # working with 0.24.8
cli-test-helpers = { version = "^4.0.0", optional = true } # working with 4.1.0
vertexai = { version ="^1.71.1", optional = true }
google-cloud-aiplatform = { version = "^1.71.1", optional = true }
# google-generativeai = { version = "^0.8.4", optional = true } # TODO: deprecated - to be removed
google-genai = { version = "^1.11.0", optional = true } # working with 1.13.0
# openai = { version = "^1.60.0", optional = true } # working with 1.70.0
# pillow = { version = "^11.1.0", optional = true }
# ollama = { version = "^0.4.7", optional = true }
huggingface-hub = { version = "^0.28.0", optional = true } # working with 0.28.1
quart = { version = "^0.20.0", optional = true }
# transformers = { version = "^4.48.1", optional = true } # working with 4.50.3
transformers = { version = "^4.50.3", optional = true } # working with 4.50.3
# torch = { version = "^2.6.0", optional = true }
accelerate = { version = "^1.3.0", optional = true } # working with 1.6.0
# aiohttp = { version = "^3.11.11", optional = true } # working with 3.11.16
anthropic = { version = "^0.45.2", optional = true }
# In theory these could be derived from the dependencies above, but
# we want to be explicit about them, so that pip doesn't spend ages resolving
# them.
# urllib3 = { version = "^2.3.0", optional = false }
shapely = { version = "^2.1.0", optional = false }

# Paste in from pip list --format=freeze

aiohttp = { version = "^3.11.18", optional = false }
beautifulsoup4 = { version = "^4.13.4", optional = false }
certifi = { version = "^2025.4.26", optional = false }
charset-normalizer = { version = "^3.4.2", optional = false }
debugpy = { version = "^1.8.14", optional = false }
frozenlist = { version = "^1.6.0", optional = false }
google-api-core = { version = "^2.25.0rc0", optional = false }
google-auth = { version = "^2.40.0", optional = false }
google-api-python-client = { version = "^2.166.0", optional = false }
# google-auth = { version = "^2.38.0", optional = false }
google-auth-httplib2 = { version = "^0.2.0", optional = false }
google-generativeai = { version = "^0.8.4", optional = false }
googleapis-common-protos = { version = "^1.70.0", optional = false }
griffe = { version = "^1.7.3", optional = false }
h11 = { version = "^0.16.0", optional = false }
httpcore = { version = "^1.0.9", optional = false }
httplib2 = { version = "^0.22.0", optional = false }
identify = { version = "^2.6.10", optional = false }
ipython = { version = "^9.2.0", optional = false }
jsonschema-specifications = { version = "^2025.4.1", optional = false }
jupytext = { version = "^1.17.1", optional = false }
Markdown = { version = "^3.8", optional = false }
mkdocs-material = { version = "^9.6.12", optional = false }
mkdocs-section-index = { version = "^0.3.10", optional = false }
multidict = { version = "^6.4.3", optional = false }
mypy_extensions = { version = "^1.1.0", optional = false }
numpy = { version = "^2.2.5", optional = false }
ollama = { version = "^0.4.8", optional = false }
openai = { version = "^1.77.0", optional = false }
packaging = { version = "^25.0", optional = false }
pillow = { version = "^11.2.1", optional = false }
pydantic = { version = "^2.11.4", optional = false }
pydantic_core = { version = "^2.33.2", optional = false }
pymdown-extensions = { version = "^10.15", optional = false }
pyparsing = { version = "^3.2.3", optional = false }
pytest-random-order = { version = "^1.1.1", optional = false }
pyzmq = { version = "^26.4.0", optional = false }
rsa = { version = "^4.9.1", optional = false }
ruff = { version = "^0.11.6", optional = false }
setuptools = { version = "^80.3.1", optional = false }
snakeviz = { version = "^2.2.2", optional = false }
soupsieve = { version = "^2.7", optional = false }
sympy = { version = "^1.14.0", optional = false }
torch = { version = "^2.7.0", optional = false }
typing_extensions = { version = "^4.13.2", optional = false }
urllib3 = { version = "^2.4.0", optional = false }
# urllib3 = { version = "^2.3.0", optional = false }
virtualenv = { version = "^20.31.1", optional = false }
websockets = { version = "^15.0.1", optional = false }
yarl = { version = "^1.20.0", optional = false }


[tool.poetry.extras]
all = [
    "black",
    "isort",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ipython",
    "ipykernel",
    "mkdocs-material",
    "mkdocstrings-python",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
    "mkdocs-same-dir",
    "mkdocs-jupyter",
    "cli-test-helpers",
    "vertexai",
    "google-cloud-aiplatform",
    # "google-generativeai",
    "google-genai",
    "openai",
    "pillow",
    "ollama",
    "huggingface-hub",
    "quart",
    "transformers",
    "torch",
    "accelerate",
    "aiohttp",
    "anthropic"
]
dev = [
    "black",
    "isort",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ipython",
    "ipykernel",
    "mkdocs-material",
    "mkdocstrings-python",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
    "mkdocs-same-dir",
    "mkdocs-jupyter",
    "cli-test-helpers",
]
gemini = [
    "vertexai",
    "google-cloud-aiplatform",
    # "google-generativeai", # TODO: deprecated - to be removed
    "google-genai",
    "pillow"
]
vertexai = [
    "vertexai",
    "google-cloud-aiplatform",
    # "google-generativeai", # TODO: deprecated - to be removed
    "google-genai",
    "pillow"
]
azure_openai = ["openai", "pillow"]
openai = ["openai", "pillow"]
ollama = ["ollama"]
huggingface_tgi = ["openai", "huggingface-hub"]
quart = ["quart", "transformers", "torch", "accelerate", "aiohttp"]
anthropic = ['anthropic']

[tool.pytest.ini_options]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
prompto_run_pipeline = "prompto.scripts.run_pipeline:main"
prompto_run_experiment = "prompto.scripts.run_experiment:cli"
prompto_check_experiment = "prompto.scripts.check_experiment:main"
prompto_create_judge_file = "prompto.scripts.create_judge_file:main"
prompto_obtain_missing_jsonl = "prompto.scripts.obtain_missing_id_jsonl:main"
prompto_convert_images = "prompto.scripts.convert_images:main"
prompto_quart_server = "prompto.apis.quart.quart_api:main"
prompto_upload_media = "prompto.upload_media:main"
